--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
         #bodymovin{
             background-color:#333;
-            width:100%;
-            height:100%;
+            width:600px;
+            height:600px;
             /*width:800px;
             height:500px;*/
             display:block;
