--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         }
 
         #bodymovin{
-            background-color:#333;
+            background-color:#fff;
             width:600px;
             height:600px;
             /*width:800px;
