--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             overflow: hidden;
             transform: translate3d(0,0,0);
             margin: auto;
+            opacity: 1;
         }
 
         .botas_loop_3,.botas_loop_2{
@@ -40,8 +41,9 @@
     var animData = {
         container: elem,
         renderer: 'svg',
-        loop: false,
+        loop: true,
         autoplay: true,
+        autoloadSegments: true,
         rendererSettings: {
             progressiveLoad:false
         },
