--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
 
         #bodymovin{
             background-color:#fff;
-            width:100%;
-            height:100%;
+            width:20%;
+            height:20%;
             /*width:800px;
             height:500px;*/
             display:block;
             overflow: hidden;
             transform: translate3d(0,0,0);
-            margin: auto;
+            /*margin: auto;*/
+            margin-left: 10px;
             opacity: 1;
         }
 
