--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
 
         #bodymovin{
             background-color:#fff;
-            width:600px;
-            height:600px;
+            width:20%;
+            height:20%;
             /*width:800px;
             height:500px;*/
             display:block;
             overflow: hidden;
             transform: translate3d(0,0,0);
             margin: auto;
+            /*margin: auto;*/
         }
 
         .botas_loop_3,.botas_loop_2{
