--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
         #bodymovin{
             background-color:#fff;
-            width:20%;
-            height:20%;
+            width:100px;
+            height:100px;
             /*width:800px;
             height:500px;*/
             display:block;
