--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <style>
         body, html{
-            background-color:#ddd;
+            background-color:#eaf6ff;
             margin: 0px;
             height: 100%;
             overflow-x: hidden;
@@ -11,7 +11,7 @@
         }
 
         #bodymovin{
-            background-color:#fff;
+            background-color:#eaf6ff;
             width:100px;
             height:100px;
             /*width:800px;
