--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <style>
         body, html{
-            background-color:#ddd;
+            background-color:#eaf6ff;
             margin: 0px;
             height: 100%;
             overflow-x: hidden;
@@ -11,16 +11,17 @@
         }
 
         #bodymovin{
-            background-color:#fff;
-            width:15%;
-            /*height:20%;*/
+            background-color:#eaf6ff;
+            width:100px;
+            height:100px;
             /*width:800px;
             height:500px;*/
             display:block;
             overflow: hidden;
             transform: translate3d(0,0,0);
-            margin-left: 10px;
             /*margin: auto;*/
+            margin-left: 10px;
+            opacity: 1;
         }
 
         .botas_loop_3,.botas_loop_2{
