--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             overflow: hidden;
             transform: translate3d(0,0,0);
             /*margin: auto;*/
-            margin-left: 10px;
+            margin: 50px;
             opacity: 1;
         }
 
